[metadata]
name = tessdata
version = 1.0.0
description = contains tessdata osd and tessdata api
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/asottile/tessdata
author = Anthony Sottile
author_email = asottile@umich.edu
license = MIT
license_files =
    LICENSE
    LICENSE.tessdata
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
py_modules = tessdata
python_requires = >=3.9
setup_requires =
    setuptools-download

[bdist_wheel]
universal = True

[setuptools_download]
download_data_files =
    [share/tessdata/osd.traineddata]
    url = https://github.com/tesseract-ocr/tessdata/raw/4767ea922bcc460e70b87b1d303ebdfed0897da8/osd.traineddata
    sha256 = e19f2ae860792fdf372cf48d8ce70ae5da3c4052962fe22e9de1f680c374bb0e

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
